# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.history/: .gitignore_20220828144551  README_20220805215347.md  README_20220805215716.md  README_20220805215813.md  README_20220828144117.md  pyproject_20220729232020.toml  pyproject_20220818231218.toml  pyproject_20220906101834.toml  setup_20220805122733.cfg  setup_20220825012008.cfg  setup_20220825012300.cfg  setup_20220825012314.cfg  setup_20220825014749.cfg  setup_20220825020542.cfg
.history/brain_games/: __init___20220805113620.py  cli_20220805110154.py  cli_20220805110507.py  cli_20220805110540.py  cli_20220805111159.py  cli_20220805112035.py  cli_20220805112051.py  cli_20220805112644.py  cli_20220805112725.py  cli_20220805112804.py  cli_20220805112821.py  cli_20220805112837.py  cli_20220805113104.py  cli_20220805113130.py  cli_20220805113314.py  cli_20220805121651.py  cli_20220805121855.py  cli_20220805123236.py  cli_20220805123327.py  cli_20220805123532.py  cli_20220805123621.py  cli_20220805124137.py  cli_20220805204108.py  cli_20220805204331.py  cli_20220805204611.py  cli_20220805210440.py  cli_20220805210537.py  cli_20220805210558.py  cli_20220805210917.py  cli_20220805210949.py  cli_20220805211032.py  cli_20220805211645.py  cli_20220805215716.py  cli_20220805220222.py  cli_20220805224706.py  cli_20220805224804.py  cli_20220825013805.py  cli_20220825013902.py  cli_20220825013915.py  cli_20220825014127.py  (+76 more)
brain_games/: cli.py  cli.py.save  engine.py
brain_games/games/: __init__.py  calc.py  (+6 more)
(+44 files in other folders)
