[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a package with small math games."
authors = ["Grigoriy <mr.igoshkin@inbox.ru>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/GregorGo/python-project-lvl1.git"
classifiers = [
    "Topic :: Introduction to the Python language :: Obtaining primary development skills" 
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"